{
    "name": "Player",
    "maps": [
        {
            "name": "PlayerCtx",
            "id": "e5348e29-cd9d-4810-a0b6-ce7e24159d3c",
            "actions": [
                {
                    "name": "Pointer",
                    "type": "Value",
                    "id": "8f451b78-dc6c-4526-a66b-71dee20d359e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "b3ff33d8-c355-43c0-8453-41ebfc05b540",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "ca262fd0-0926-4280-8a76-d4e8521cdaeb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "b22407bc-a5a0-4385-8e45-12d6d3693da0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftShift",
                    "type": "Button",
                    "id": "f449bd8d-5c54-4460-a7f9-f054dfa10a06",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Space",
                    "type": "Button",
                    "id": "f7c2a87b-a6a1-4810-bd42-2a46dfcddb8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b9fc7491-6520-49c1-a540-582fe9559a9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "e92fa95b-c0fc-4f92-9d55-f07226f6e47f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "c78d8eb3-4418-45ca-bfba-39b03168586f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchWeapon",
                    "type": "Button",
                    "id": "a0fa11f0-3b06-4cac-9b48-98e9ddaea9be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "9c93ebef-42e2-4b88-a75e-d36f9975f2e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill",
                    "type": "Button",
                    "id": "cbc807d0-50ae-4dfb-83b7-8efbce4859c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Search",
                    "type": "Button",
                    "id": "c2b2d9ee-6d00-4253-b2f2-73885927ff12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f9b77d90-b6a2-4a88-9732-dbcbf9c079d5",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pointer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e40aedd-8ff6-472e-8927-30cf2fb149cc",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "7875132b-999c-4eed-9010-b7161db8ff84",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e031a1a6-0854-4bac-8c9c-d1caacbec6af",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4ee8dd98-5230-451c-8079-a6fef0a7d0e0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f8105152-74eb-452b-b374-8c8c40a5178a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6c39f288-f365-495e-8ee7-3dead62a6b51",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "22b3311e-5955-42a1-8197-e2933a757f85",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c9ae651-ea33-404a-a7a2-372f74b110b3",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftShift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2dbd31ae-197d-49cf-81e8-a82ba33fb032",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Space",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0283bb56-7c5b-4c95-8a47-fe0ff8eb6173",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ec7e99e-1dc0-4bcc-b303-6a08665bf8b5",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "390ea4b7-49df-4534-a57c-6e8bd3dd46be",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b83237f0-4af0-41ec-933e-00816ba82ced",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce1b9ca9-e13e-4d5d-b42c-c4e480c68b4f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c6d5951-e3c4-4ef7-8cee-c90f163a2cc6",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4f7c8c2-6fd5-43de-9ac9-92cb101e3e7c",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Search",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}